--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     blanco EDF2F4
     gris 8D99AE
     Rojo oscuro D90429
-    azul 2B2D42
+    azul 2B2D42 2b2d42
     */
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     color: white;
@@ -34,18 +34,71 @@
     height: 50px;
   }
   
-  a {
+  nav a {
     margin: 15px;
-  }
-
-  main{
-    padding: 5%;
-    height: 100%;
-    background-color: black;
+    text-decoration: none;
   }
 
   section{
     height: 550px;
     width: 100%;
-    /* background-color: blue; */
+    /* background-color: blue;  */
+    
+  }
+
+  #titulo{
+    color: #2b2d42;
+  }
+
+  form {
+    background-color: #2b2d42;
+    padding: 30px;
+    border-radius: 15px;
+    max-width: 500px;
+    margin: 20px auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin-bottom: 50px;
+  }
+  
+  form label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  form input,
+  form select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #edf2f4;
+    color: #2b2d42;
+    font-size: 14px;
+  }
+  
+  form button {
+    padding: 10px 20px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ef233c;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  form button:hover {
+    background-color: #d90429;
+  }
+  
+  section h1 {
+    text-align: center;
+    margin: 20px;
+    color: white;
+  }
+
+  option{
+    color: #2b2d42;
   }
